--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Guy Tepper",
   "license": "MIT",
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "jest": "^23.6.0"
   },
   "scripts": {
