Added GitHub repo to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Remove descriptors from album names.",
   "main": "index.js",
   "author": "Guy Tepper",
+  "repository": "github:guytepper/album-name-normalizer",
   "license": "MIT",
   "devDependencies": {
     "coveralls": "^3.0.2",
